Added finding my personal likes/dislikes using my own reviews

--- a/WebScrapingAndFeatureGen.ipynb
+++ b/WebScrapingAndFeatureGen.ipynb
@@ -39,12 +39,12 @@
       "source": [
         "import pandas as pd\n",
         "#df = pd.read_csv('data/storygraphExport.csv')\n",
-        "df = pd.read_csv('data/scrapedDirty.csv')"
+        "df = pd.read_csv('scraped_storygraphExport.csv')"
       ],
       "metadata": {
         "id": "6QrYoaeqDi3E"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -945,7 +945,7 @@
       "metadata": {
         "id": "fCpBd6guAEcm"
       },
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -1823,10 +1823,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Theme extraction"
+        "# LLM (OpenAI) for Feature Extraction"
       ],
       "metadata": {
         "id": "fh1Xp5awvV-a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Finding my personal likes and dislikes"
+      ],
+      "metadata": {
+        "id": "d90w4xj4D1ip"
       }
     },
     {
@@ -1835,67 +1844,10 @@
         "pip install langchain_openai"
       ],
       "metadata": {
-        "id": "I0PyVyS7DFAj",
-        "outputId": "9b7aed70-4c33-4ad5-88a2-66028871e58d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "I0PyVyS7DFAj"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting langchain_openai\n",
-            "  Downloading langchain_openai-0.3.8-py3-none-any.whl.metadata (2.3 kB)\n",
-            "Collecting langchain-core<1.0.0,>=0.3.42 (from langchain_openai)\n",
-            "  Downloading langchain_core-0.3.43-py3-none-any.whl.metadata (5.9 kB)\n",
-            "Requirement already satisfied: openai<2.0.0,>=1.58.1 in /usr/local/lib/python3.11/dist-packages (from langchain_openai) (1.61.1)\n",
-            "Collecting tiktoken<1,>=0.7 (from langchain_openai)\n",
-            "  Downloading tiktoken-0.9.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.7 kB)\n",
-            "Requirement already satisfied: langsmith<0.4,>=0.1.125 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (0.3.11)\n",
-            "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (9.0.0)\n",
-            "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (1.33)\n",
-            "Requirement already satisfied: PyYAML>=5.3 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (6.0.2)\n",
-            "Requirement already satisfied: packaging<25,>=23.2 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (24.2)\n",
-            "Requirement already satisfied: typing-extensions>=4.7 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (4.12.2)\n",
-            "Requirement already satisfied: pydantic<3.0.0,>=2.5.2 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.42->langchain_openai) (2.10.6)\n",
-            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.11/dist-packages (from openai<2.0.0,>=1.58.1->langchain_openai) (3.7.1)\n",
-            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from openai<2.0.0,>=1.58.1->langchain_openai) (1.9.0)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.11/dist-packages (from openai<2.0.0,>=1.58.1->langchain_openai) (0.28.1)\n",
-            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from openai<2.0.0,>=1.58.1->langchain_openai) (0.8.2)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.11/dist-packages (from openai<2.0.0,>=1.58.1->langchain_openai) (1.3.1)\n",
-            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.11/dist-packages (from openai<2.0.0,>=1.58.1->langchain_openai) (4.67.1)\n",
-            "Requirement already satisfied: regex>=2022.1.18 in /usr/local/lib/python3.11/dist-packages (from tiktoken<1,>=0.7->langchain_openai) (2024.11.6)\n",
-            "Requirement already satisfied: requests>=2.26.0 in /usr/local/lib/python3.11/dist-packages (from tiktoken<1,>=0.7->langchain_openai) (2.32.3)\n",
-            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.11/dist-packages (from anyio<5,>=3.5.0->openai<2.0.0,>=1.58.1->langchain_openai) (3.10)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->openai<2.0.0,>=1.58.1->langchain_openai) (2025.1.31)\n",
-            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->openai<2.0.0,>=1.58.1->langchain_openai) (1.0.7)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.11/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai<2.0.0,>=1.58.1->langchain_openai) (0.14.0)\n",
-            "Requirement already satisfied: jsonpointer>=1.9 in /usr/local/lib/python3.11/dist-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.42->langchain_openai) (3.0.0)\n",
-            "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.42->langchain_openai) (3.10.15)\n",
-            "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.42->langchain_openai) (1.0.0)\n",
-            "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.125->langchain-core<1.0.0,>=0.3.42->langchain_openai) (0.23.0)\n",
-            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/dist-packages (from pydantic<3.0.0,>=2.5.2->langchain-core<1.0.0,>=0.3.42->langchain_openai) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.27.2 in /usr/local/lib/python3.11/dist-packages (from pydantic<3.0.0,>=2.5.2->langchain-core<1.0.0,>=0.3.42->langchain_openai) (2.27.2)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.26.0->tiktoken<1,>=0.7->langchain_openai) (3.4.1)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.26.0->tiktoken<1,>=0.7->langchain_openai) (2.3.0)\n",
-            "Downloading langchain_openai-0.3.8-py3-none-any.whl (55 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m55.4/55.4 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading langchain_core-0.3.43-py3-none-any.whl (415 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m415.4/415.4 kB\u001b[0m \u001b[31m34.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading tiktoken-0.9.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m61.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: tiktoken, langchain-core, langchain_openai\n",
-            "  Attempting uninstall: langchain-core\n",
-            "    Found existing installation: langchain-core 0.3.40\n",
-            "    Uninstalling langchain-core-0.3.40:\n",
-            "      Successfully uninstalled langchain-core-0.3.40\n",
-            "Successfully installed langchain-core-0.3.43 langchain_openai-0.3.8 tiktoken-0.9.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1906,8 +1858,223 @@
       "metadata": {
         "id": "exf34dnVB8lI"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "from bs4 import BeautifulSoup\n",
+        "\n",
+        "def clean_text(text):\n",
+        "    # Remove HTML tags\n",
+        "    soup = BeautifulSoup(text, 'html.parser')\n",
+        "    cleaned_text = soup.get_text()\n",
+        "\n",
+        "    # Remove spoiler tags\n",
+        "    cleaned_text = re.sub(r'<spoiler>.*?</spoiler>', '', cleaned_text)\n",
+        "\n",
+        "    # Replace non-breaking spaces and other special characters with standard spaces\n",
+        "    cleaned_text = cleaned_text.replace('\\xa0', ' ')\n",
+        "\n",
+        "    # Remove extra whitespace\n",
+        "    cleaned_text = ' '.join(cleaned_text.split())\n",
+        "\n",
+        "    return cleaned_text\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "mMHdB1O-usT3"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reviews = df[~df['Review'].isna()]['Review'].values\n",
+        "cleaned_reviews = [clean_text(review) for review in reviews]"
+      ],
+      "metadata": {
+        "id": "1LfCoDnauJU4"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "from langchain_core.prompts import ChatPromptTemplate\n",
+        "\n",
+        "def extract_likes_openai(reviews,openai_api_key=openaikey, model_name=\"gpt-4o-mini\",batch_size=15,likes=True):\n",
+        "    extracted_likes = []\n",
+        "\n",
+        "\n",
+        "    if likes:\n",
+        "      like = 'like'\n",
+        "      example = 'complex characters, beautiful writing, sapphic stories'\n",
+        "    else:\n",
+        "      like = 'dislike'\n",
+        "      example = 'underdeveloped themes, lack of nuance, bad writing'\n",
+        "\n",
+        "\n",
+        "    for i in range(0, len(reviews), batch_size):\n",
+        "        batch = reviews[i:i + batch_size]\n",
+        "        combined_reviews = \"\\n\\n\".join(batch)  # Combine reviews with newlines\n",
+        "\n",
+        "        template = f\"\"\"\n",
+        "        You are a literary analyst. I am giving you the reviews I have made based on other books I have read.\n",
+        "        Please extract different genres, moods, themes, and aspects of the reviews that you think I {like}. Keep in mind, I will give you the blurb of a book later to see if it matches any of my {like}s.\n",
+        "        Return the likes as a comma-separated list (no other text).\n",
+        "\n",
+        "        your output should look like this (of course, replace with relevant {like}): {example}\n",
+        "\n",
+        "        reviews:\n",
+        "        {combined_reviews}\n",
+        "        \"\"\"\n",
+        "\n",
+        "        prompt = ChatPromptTemplate.from_template(template)\n",
+        "        model = ChatOpenAI(openai_api_key=openai_api_key, model=model_name)\n",
+        "        chain = prompt | model\n",
+        "\n",
+        "        try:\n",
+        "            response = chain.invoke({}) #Invoke the chain. No input parameters needed for the prompt.\n",
+        "            extracted_likes.append(response.content)\n",
+        "\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"An error occurred: {e}\")\n",
+        "\n",
+        "    combined_likes = \"\\n\".join(extracted_likes)\n",
+        "\n",
+        "    summary_template = f\"\"\"\n",
+        "    You are a literary analyst. I gave you my reviews in batches to extract genres, moods, themes, and aspects that I {like} from what my reviews say\n",
+        "    please summarize the main themes and generalize them a bit to describe the overall reading preferences. Keep in mind I will send you book blurbs later to see if they match any of my {like}s.\n",
+        "    Please don't be afraid to send a long list, though!\n",
+        "    Return the themes as a comma-separated list (no other text).\n",
+        "\n",
+        "    Extracted likes:\n",
+        "    {combined_likes}\n",
+        "    \"\"\"\n",
+        "\n",
+        "    summary_prompt = ChatPromptTemplate.from_template(summary_template)\n",
+        "    summary_model = ChatOpenAI(openai_api_key=openai_api_key, model=model_name)\n",
+        "    summary_chain = summary_prompt | summary_model\n",
+        "\n",
+        "    try:\n",
+        "        summary_response = summary_chain.invoke({})\n",
+        "        return summary_response.content\n",
+        "    except Exception as e:\n",
+        "        print(f\"An error occurred during theme summarization: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "my_likes = extract_likes_openai(cleaned_reviews)\n",
+        "my_dislikes = extract_likes_openai(cleaned_reviews,likes=False)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "N-3jf64HviRg"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def likes_clean(my_likes):\n",
+        "  my_likes = my_likes.split(',')\n",
+        "  my_likes = [like.strip() for like in my_likes]\n",
+        "  if my_likes[-1].startswith('and'):\n",
+        "    my_likes[-1] = my_likes[-1][4:]\n",
+        "    my_likes = ['and'] + my_likes\n",
+        "  return my_likes\n",
+        "\n",
+        "my_likes = likes_clean(my_likes)\n",
+        "my_dislikes = likes_clean(my_dislikes)"
+      ],
+      "metadata": {
+        "id": "asBzUQcl5WiI"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def identify_liked_elements(df, like_list, blurb_col=\"blurb\", openai_api_key=openaikey, model_name=\"gpt-4o-mini\",likes=True):\n",
+        "\n",
+        "    if likes:\n",
+        "      like = 'like'\n",
+        "    else:\n",
+        "      like = 'dislike'\n",
+        "\n",
+        "    template = f\"\"\"\n",
+        "        You are a literary analyst. I will provide a list of things I {{like}} and a book blurb.\n",
+        "        Please identify which of the things I {{like}} are present in the blurb.\n",
+        "        Return the identified likes as a comma-separated list (no other text). If there are no matches, return None.\n",
+        "\n",
+        "        My likes:\n",
+        "        {{like_list}}\n",
+        "\n",
+        "        Blurb:\n",
+        "        {{blurb}}\n",
+        "\n",
+        "        Matched likes:\n",
+        "    \"\"\"\n",
+        "\n",
+        "    prompt = ChatPromptTemplate.from_template(template)\n",
+        "    model = ChatOpenAI(openai_api_key=openai_api_key, model=model_name)\n",
+        "    chain = prompt | model\n",
+        "\n",
+        "    def get_matched_likes(blurb, likes_str,like):\n",
+        "        if not blurb or pd.isna(blurb):\n",
+        "            return None\n",
+        "\n",
+        "        try:\n",
+        "            response = chain.invoke({\"blurb\": blurb, \"like_list\": likes_str,\"like\":like})\n",
+        "            matched_likes = [like.strip() for like in response.content.strip().split(',')]\n",
+        "            return matched_likes\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error identifying matched likes: {e}\")\n",
+        "            return None\n",
+        "\n",
+        "    df[f'matched_{like}s'] = df.apply(lambda row: get_matched_likes(row[blurb_col], \", \".join(like_list),like), axis=1)\n",
+        "    return df\n",
+        "\n",
+        "df = identify_liked_elements(df, my_likes, likes=True)\n",
+        "df = identify_liked_elements(df, my_dislikes, likes=False)"
+      ],
+      "metadata": {
+        "id": "VwGJaZRGzJSQ"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#set where matched_likes = [None] as np.nan\n",
+        "df['matched_likes'] = df['matched_likes'].apply(lambda x: np.nan if x == ['None'] else x)\n",
+        "df['matched_dislikes'] = df['matched_dislikes'].apply(lambda x: np.nan if x == ['None'] else x)\n"
+      ],
+      "metadata": {
+        "id": "AG3B3BeSCd4y"
+      },
+      "execution_count": 102,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Finding themes of a book"
+      ],
+      "metadata": {
+        "id": "7wPTzazJD5pg"
+      }
     },
     {
       "cell_type": "code",
@@ -1962,7 +2129,7 @@
       "metadata": {
         "id": "nhSoE-diB2zY"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1978,9 +2145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W2kLXyaxYoCh",
-        "outputId": "76e7bff2-fbf0-42b3-bbf0-5bfa2a19e86d"
+        "outputId": "58281312-10ab-4c83-a4b9-41e8cbd37a69"
       },
-      "execution_count": 6,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
